禁止AOT IL3050警告，[UnconditionalSuppressMessage("AOT", "IL3050")] // 可为null的值类型 typeof(Nullable<>).MakeGenericType(type); Activator.CreateInstance(typeof(Table<>).MakeGenericType(p_rowType)) JsonRpcSerializer.Deserialize DataAccess.FirstCol  typeof(List<>).MakeGenericType(p_type) typeof(IDataAccess).GetMethod("Query" ) query.MakeGenericMethod(child.Type) EntityWriter.Save<TEntity>(Table<TEntity> p_tbl) JsonSerializer.Serialize( IRpcJson的实现类

--- a/Client/Directory.Build.props
+++ b/Client/Directory.Build.props
@@ -13,6 +13,12 @@
         <DisableEmbeddedXbf>true</DisableEmbeddedXbf>
         <!-- 生成xml文档 -->
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
+
+        <!-- 分析是否与AOT兼容 -->
+        <IsAotCompatible>true</IsAotCompatible>
+
+        <!-- JSImport/JSExport标签 和 AOT修剪WinRT ABI时需要使用不安全代码 -->
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
 
     <!--
