--- a/Service/src/Cos/Cos.csproj
+++ b/Service/src/Cos/Cos.csproj
@@ -1,6 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 	<ItemGroup>
 		<ProjectReference Include="..\Dt.Core\Dt.Core.csproj" />
+		<ProjectReference Include="..\Dt.Da\Dt.Da.csproj" />
+		<ProjectReference Include="..\Dt.Cm\Dt.Cm.csproj" />
+		<ProjectReference Include="..\Dt.Fsm\Dt.Fsm.csproj" />
+		<ProjectReference Include="..\Dt.Msg\Dt.Msg.csproj" />
 		<ProjectReference Include="..\Dt.Service\Dt.Service.csproj" />
 	</ItemGroup>
 	<ItemGroup>
