--- a/Service/src/Cos/web.config
+++ b/Service/src/Cos/web.config
@@ -5,7 +5,7 @@
       <handlers>
         <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
-      <aspNetCore processPath="bin\Debug\net10.0\Cos.exe" arguments="" stdoutLogEnabled="false" hostingModel="outofprocess" />
+      <aspNetCore processPath="bin\Debug\net10.0\Cos.exe" arguments="proxy=iis" stdoutLogEnabled="false" hostingModel="outofprocess" />
     </system.webServer>
   </location>
 </configuration>
