--- a/Client/References.props
+++ b/Client/References.props
@@ -21,13 +21,12 @@
         <PackageReference Include="Serilog.Extensions.ElapsedTime" Version="2.1.0" />
 
         <!-- Db相关，两端版本相同 -->
-        <PackageReference Include="Microsoft.Data.Sqlite" Version="10.0.0" />
+        <PackageReference Include="Microsoft.Data.Sqlite" Version="10.0.2" />
         <PackageReference Include="MySqlConnector" Version="2.5.0" />
-        <PackageReference Include="Npgsql" Version="9.0.4" />
+        <PackageReference Include="Npgsql" Version="10.0.1" />
         <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="23.26.0" />
-        <!-- 高版本支持Azure，引用太多，且和 CoreWebView2 冲突，System.IdentityModel.Tokens.Jwt低版本有漏洞 -->
+        <!-- 高版本支持Azure，引用太多，且和 CoreWebView2 冲突 -->
         <PackageReference Include="Microsoft.Data.SqlClient" Version="2.1.7" />
-        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.15.0" />
         <PackageReference Include="Dapper" Version="2.1.66" />
         
         <!-- 本地化，无用，造成win下引用uno不同版本，编译慢 -->
