--- a/Infras/Directory.Build.props
+++ b/Infras/Directory.Build.props
@@ -2,8 +2,8 @@
     <PropertyGroup>
         <!-- 解决方案右键菜单 - 设置框架，修改后自动重新加载，快、方便 -->
         <TargetFrameworks>net10.0-android;net10.0-ios;net10.0-windows10.0.19041;net10.0-desktop;net10.0-browserwasm</TargetFrameworks>
-        
-        <NoWarn>$(NoWarn);1591;8785;NU1701;Uno0001;0252;NETSDK1206;WMC1510;IL2090;IL2067;IL2070;IL2026;IL2075;IL2072;IL2062;IL2091;IL2087;IL2057;IL2080;IL2090;IL2060;IL2096;IL2077</NoWarn>
+
+        <NoWarn>$(NoWarn);1591;NU1701;Uno0001;Uno0006;0252;NETSDK1206;SYSLIB0050;WIN2D0001;WMC1510;IL2026;IL2057;IL2060;IL2062;IL2067;IL2070;IL2072;IL2075;IL2077;IL2080;IL2087;IL2090;IL2091;IL2096;IL3050</NoWarn>
         <!-- 始终禁止xbf嵌入到pri文件，默认debug时不嵌入，release时嵌入，嵌入时包升级会造成引用项目都必须重新编译 -->
         <DisableEmbeddedXbf>true</DisableEmbeddedXbf>
 
