--- a/Demo/Directory.Build.props
+++ b/Demo/Directory.Build.props
@@ -5,9 +5,15 @@
 
 		<!-- 启用全局using -->
 		<ImplicitUsings>enable</ImplicitUsings>
-		<NoWarn>$(NoWarn);1591;NU1701;Uno0001;Uno0006;0252;NETSDK1206;SYSLIB0050;WASM0001;WIN2D0001;IL2090;IL2067;IL2070;IL2026;IL2075;IL2072;IL2091;IL2087;IL2057;IL2080;IL2090;IL2060;IL2096;IL2077</NoWarn>
+		<NoWarn>$(NoWarn);1591;NU1701;Uno0001;Uno0006;0252;NETSDK1206;SYSLIB0050;WIN2D0001;WMC1510;IL2026;IL2057;IL2060;IL2062;IL2067;IL2070;IL2072;IL2075;IL2077;IL2080;IL2087;IL2090;IL2091;IL2096;IL3050</NoWarn>
 		<!-- 始终禁止xbf嵌入到pri文件，默认debug时不嵌入，release时嵌入，嵌入时包升级会造成引用项目都必须重新编译 -->
 		<DisableEmbeddedXbf>true</DisableEmbeddedXbf>
+
+		<!-- 分析是否与AOT兼容 -->
+		<IsAotCompatible>true</IsAotCompatible>
+
+		<!-- JSImport/JSExport标签 和 AOT修剪WinRT ABI时需要使用不安全代码 -->
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	</PropertyGroup>
 
 	<!--
