--- a/Service/src/Directory.Build.props
+++ b/Service/src/Directory.Build.props
@@ -4,7 +4,7 @@
 		<TargetFramework>net10.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
-		<NoWarn>$(NoWarn);1701;1702;1705;1591;IL2026;IL2046;IL2055;IL2057;IL2060;IL2065;IL2067;IL2070;IL2072;IL2075;IL2077;IL2080;IL2087;IL2090;IL2091;IL2093;IL2111;IL2112;IL2122;IL3000;IL3002;IL3050</NoWarn>
+		<NoWarn>$(NoWarn);1701;1702;1705;1591;IL2026;IL2046;IL2055;IL2057;IL2060;IL2062;IL2065;IL2067;IL2070;IL2072;IL2075;IL2077;IL2080;IL2087;IL2090;IL2091;IL2093;IL2096;IL2111;IL2112;IL2122;IL3000;IL3002;IL3050</NoWarn>
 		<DefineConstants>$(DefineConstants);TRACE;SERVER</DefineConstants>
 	</PropertyGroup>
 
