--- a/Demo/Demo/Platforms/Android/AndroidManifest.xml
+++ b/Demo/Demo/Platforms/Android/AndroidManifest.xml
@@ -4,7 +4,7 @@
           android:versionName="5.2.0"
           package="com.dt.demo"
           android:installLocation="auto">
-  <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="36" />
+  <uses-sdk android:targetSdkVersion="36" />
   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
   <uses-permission android:name="android.permission.INTERNET" />
